# vins-kinematic

./: generated_path_noise.csv
benchmark_publisher/config/MH_03_medium/: data.csv
benchmark_publisher/launch/: publish.launch
benchmark_publisher/src/: benchmark_publisher_node.cpp
camera_model/src/camera_models/: PinholeCamera.cc
config/dataset/: agent1.yaml  agent2(复件).yaml  agent2.yaml
config/euroc/: euroc_config(复件).yaml
docker/: Dockerfile
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  yolo_v2_class.hpp
offline_process/: CMakeLists.txt  package.xml
offline_process/config/: data_noise.csv  euroc_config.yaml  generated_path.csv  generated_path_noise.csv  generated_path_noise.tum  i  i.csv  i.tum  j  j.csv  j.tum  raw_03.csv  raw_03.tum
offline_process/config/compare1/: generated_path.csv  test.csv  test1.csv  test10.csv  test20.csv  test5.csv  test_v.csv  test_v1.csv  test_v10.csv  test_v5.csv
offline_process/launch/: process.launch
offline_process/src/: bifactor.cpp  bifactor.h  factor.cpp  factor.h  initialize.cpp  initialize.h  offline_optimization_node.cpp
pose_graph/src/: keyframe.cpp  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
vins_estimator/launch/: agent1.launch  agent2.launch
vins_estimator/src/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: pose_local_parameterization.cpp  pose_local_parameterization.h
vins_estimator/src/utility/: visualization.cpp
